Fixed a bug where the text on the left SideBar did not move with the SideBar. It was just stuck on the left side and the SideBar would slide underneath it.

--- a/src/components/SideBar.module.css
+++ b/src/components/SideBar.module.css
@@ -1,5 +1,7 @@
 .container {
   display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
   padding-top: 1px;
   height: 100%;
   background-color: #a9a9a9;
